# RustWebProj

./: .gitignore  LICENSE  README.md
rust_api/: 404.html  Cargo.toml  index.html
rust_api/src/: lib.rs
rust_web/: Cargo.toml  index.html  style.css
rust_web/src/: add_application_modal.rs  application_component.rs  applications.rs  applications_component.rs  lib.rs  main.rs  todo_component.rs  update_application_modal.rs
