[package]
name = "rust_web"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = "^0.19.0"
reqwest = { version = "0.12.0", features = ["json"]}
serde = "1.0"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [ "HtmlInputElement" ] }